# CFT-test-task

./: README.md  alembic.ini  fill_db.py  pyproject.toml  pyprojecttest.toml
core/: main.py
migrations/: env.py
migrations/versions/: 102e9f7e3d12_asdasdasd.py  9bfd59eac288_fix.py
src/auth/: auth.py  database.py  manager.py  role.py  schemas.py
src/routers/: current_users.py  routers.py
test/: conftest.py  test_auth.py
