[tool.poetry]
name = "cft"
version = "0.1.0"
description = ""
authors = ["kadimk4 <khaydarshin2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
asyncpg = "^0.27.0"
postgres = "^4.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
faker = "^18.11.1"
httpx = "^0.24.1"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
